<resources>
    <string name="app_name">RatAppAndroid</string>
    <string name="username">username</string>
    <string name="full_name">full name</string>
    <string name="password">password</string>
    <string name="submit">submit</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="registration">registration</string>
    <string name="dashboard_body_text">this is the dashboard</string>
    <string name="dashboard_title_text">congratulations, you are logged in.</string>
    <string name="log_out">log out</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="password_again">password again</string>
    <string name="account_type">account type</string>
    <string name="user">user</string>
    <string name="admin">admin</string>
    <string name="longitude">longitude:</string>
    <string name="latitude">latitude:</string>
    <string name="unique_key">unique key:</string>
    <string name="date_created">date created:</string>
    <string name="location_type">location type:</string>
    <string name="zip_code">zip code:</string>
    <string name="address">address:</string>
    <string name="city">city:</string>
    <string name="borough">borough:</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyA3uLpITJlvyWW7k1S0p8eVIgzF4LP2pZg</string>
    <string name="map_view">Map View</string>
    <string name="title_activity_test_maps">Map</string>
    <string name="start_date">start date:</string>
    <string name="end_date">end date:</string>
    <string name="select_end_date">select end date</string>
    <string name="select_start_date">select start date</string>
    <string name="find_rat_sightings">find rat sightings</string>
<<<<<<< HEAD
=======
    <string name="click_to_add_a_rat_sighting">click to add a rat sighting</string>
    <string name="do_not_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="graph_view">Graph View</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ten">2010</string>
    <string name="eleven">2011</string>
    <string name="twelve">2012</string>
    <string name="thirteen">2013</string>
    <string name="fourteen">2014</string>
    <string name="fifteen">2015</string>
    <string name="sixteen">2016</string>
    <string name="seventeen">2017</string>
    <string name="point_graph">Point Graph</string>
    <string name="line_graph">Line Graph</string>
    <string name="bar_graph">Bar Graph</string>
>>>>>>> 47c10587298705a5c874cddd15aca329fcc64c75
</resources>
