<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/logged_in_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/include" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/keyMarker"
                android:text="@string/unique_key"
            />

            <TextView
                android:id="@+id/keyValue"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/createDateMarker"
                android:text="@string/date_created"
                />

            <TextView
                android:id="@+id/createDateValue"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/locationTypeMarker"
                android:text="@string/location_type"
                />

            <TextView
                android:id="@+id/locationTypeValue"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/zipMarker"
                android:text="@string/zip_code"
                />

            <TextView
                android:id="@+id/zipValue"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/addressMarker"
                android:text="@string/address"
                />

            <TextView
                android:id="@+id/addressValue"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/cityMarker"
                android:text="@string/city"
                />

            <TextView
                android:id="@+id/cityValue"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/boroughMarker"
                android:text="@string/borough"
                />

            <TextView
                android:id="@+id/boroughValue"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/latitudeMarker"
                android:text="@string/latitude"
                />

            <TextView
                android:id="@+id/latitudeValue"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/longitudeMarker"
                android:text="@string/longitude"
                />

            <TextView
                android:id="@+id/longitudeValue"
                />

        </TableRow>
    </TableLayout>


</LinearLayout>