<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/selectStartDateButtonGraph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_start_date" />

    <Button
        android:id="@+id/selectEndDateButtonGraph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_end_date" />

    <Button
        android:id="@+id/findRatSightingsGraph"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_rat_sightings"
        android:layout_marginBottom="4dp"/>

    <!--<com.github.mikephil.charting.charts.BarChart-->
        <!--android:id="@+id/chart"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->
    <com.jjoe64.graphview.helper.GraphViewXML
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="364dp"
        app:seriesColor="#ee0000"
        app:seriesData="0=5;2=5;3=0;4=2"
        app:seriesType="line" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    </LinearLayout>
</LinearLayout>