<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/logged_in_banner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/include" />

        <TextView
            android:id="@+id/longitudeLabel"
            android:labelFor="@+id/longitudeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/longitude"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible"
            tools:text="longitude"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/include"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/longitudeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="-3dp"
            android:ems="10"
            android:inputType="text"
            android:digits="0123456789-."
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/longitudeLabel">

            <requestFocus /> <!-- sets initial focus to be on this field -->
        </EditText>

        <TextView
            android:id="@+id/latitudeLabel"
            android:labelFor="@+id/latitudeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/latitude"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible"
            tools:text="latitude"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/longitudeInput"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/latitudeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:inputType="text"
            android:digits="0123456789-."
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/latitudeLabel">
        </EditText>

        <Button
            android:id="@+id/detectLocationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="detect latitude and longitude"
            android:onClick="detectLocation"
            app:layout_constraintTop_toBottomOf="@id/latitudeInput"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="51dp" />

        <TextView
            android:id="@+id/cityLabel"
            android:labelFor="@+id/cityInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/city"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible"
            tools:text="city"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/detectLocationButton"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/cityInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="-3dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cityLabel">
        </EditText>

        <TextView
            android:id="@+id/locationTypeLabel"
            android:labelFor="@+id/locationTypeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/location_type"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible"
            tools:text="location type"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/cityInput"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/locationTypeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="-3dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/locationTypeLabel">
        </EditText>

        <TextView
            android:id="@+id/boroughLabel"
            android:labelFor="@+id/boroughInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/borough"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible"
            tools:text="borough"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/locationTypeInput"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/boroughInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="-3dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boroughLabel">
        </EditText>

        <TextView
            android:id="@+id/addressLabel"
            android:labelFor="@id/addressInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/address"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible"
            tools:text="address"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/boroughInput"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/addressInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="-3dp"
            android:ems="10"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addressLabel">
        </EditText>

        <TextView
            android:id="@+id/zipLabel"
            android:labelFor="@+id/zipInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/zip_code"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:visibility="visible"
            tools:text="zip code"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="@id/addressInput"
            app:layout_constraintLeft_toLeftOf="parent" />

        <EditText
            android:id="@+id/zipInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="-3dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/zipLabel">
        </EditText>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            tools:text="@android:string/cancel"
            android:layout_marginStart="51dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/zipInput" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            tools:text="@string/submit"
            android:layout_marginStart="51dp"
            app:layout_constraintLeft_toRightOf="@+id/cancelButton"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@+id/zipInput" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>