<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/passwordConfirmationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:text="confirm your password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        tools:layout_editor_absoluteX="51dp"
        tools:text="confirm your password"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <EditText
        android:id="@+id/passwordConfirmationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:ems="10"
        android:hint="password again"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="51dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationLabel" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/password"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        tools:text="password"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/passwordLabel"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="56dp" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="visible"
        tools:text="username"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="37dp"
        android:layout_marginLeft="51dp" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:layout_marginTop="-3dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameLabel"
        android:layout_marginStart="51dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="51dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        tools:text="@android:string/cancel"
        android:layout_marginStart="51dp"
        android:layout_marginTop="52dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationInput"
        android:layout_marginLeft="51dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        tools:text="@string/submit"
        android:layout_marginStart="51dp"
        android:layout_marginTop="53dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmationInput"
        app:layout_constraintLeft_toRightOf="@+id/cancelButton"
        android:layout_marginLeft="47dp" />
</android.support.constraint.ConstraintLayout>